@@ -8,7 +8,7 @@ setup(
     url='https://github.com/ccnmtl/ctlsettings',
     description='Columbia CTL common Django base settings',
     long_description='common settings we use across all our projects',
-    install_requires = [
+    install_requires=[
         'django-cas-ng',
         'django-debug-toolbar',
         'coverage',
@@ -23,9 +23,12 @@ setup(
         'gunicorn',
         'django-impersonate',
     ],
-    scripts = [],
-    license = 'GPL-3.0-or-later',
-    platforms = ['any'],
-    package_data = {'' : ['*.*']},
-    packages = ['ctlsettings'],
+    scripts=[],
+    license='GPL-3.0-or-later',
+    platforms=['any'],
+    packages=['ctlsettings', 'ctlsettings.templates'],
+    package_data={
+        'ctlsettings': ['*.py'],
+        'ctlsettings.templates': ['*/*.html'],
+    },
 )
